conformance/tests/httproute-invalid-parentref-not-matching-listener-port.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-listener-not-matching-route-port
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
    # mismatched port here (81 is not an available gateway listener) triggers NoMatchingParent reason
    port: 81
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
